--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Git class</h1>
+    <p>This is an introductory class to git</p>
+    <p> I added new message</p>
 </body>
 </html>
